tooling/nargo_cli/tests/snapshots/execution_success/negative_associated_constants/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
trait Foo {
    let N: i32;

    let M: i32;

    fn n() -> i32 {
        Self::N
    }

    fn m() -> i32 {
        Self::M
    }
}

impl Foo for i32 {
    let N: i32 = -12345_i32;

    let M: i32 = -7655_i32;
}

fn main() {
    println(<i32 as Foo>::n());
    println(<i32 as Foo>::m());
}
